# zero_maker

./: README.md
computer_vision/driving_area_train/: CMakeLists.txt  data_loaders.py  package.xml  test.py  test_visualize.py  train.py
computer_vision/driving_area_train/checkpoints/: ldln_ckpt_0.pth  ldln_ckpt_1.pth  ldln_ckpt_2.pth  ldln_ckpt_3.pth  ldln_ckpt_4.pth  ldln_ckpt_5.pth
computer_vision/driving_area_train/data/: train.txt
computer_vision/driving_area_train/data_loader/: dataset.py
computer_vision/driving_area_train/scripts/: model.py
computer_vision/driving_area_train/txt_maker/: change_txt.py  make_txt.py
computer_vision/global_map_generator/: CMakeLists.txt  package.xml  perspective_matrix_left.txt  perspective_matrix_middle.txt  perspective_matrix_right.txt
computer_vision/global_map_generator/include/: temp.txt
computer_vision/global_map_generator/scripts/: findobstaclepoints.py  findpoint.py  generate.py  transform.py
computer_vision/global_map_generator/src/: global_map.cpp  global_map_publisher.cpp
config/: spawn.txt
path_planning/: CMakeLists.txt
path_planning/src/: planning.cpp  rrt_ys.cpp  rrt_ys.h
pp/local_rrt/: CMakeLists.txt  package.xml
pp/local_rrt/src/: rrt_ys.cpp  rrt_ys.h
pp/path_planning/: CMakeLists.txt  package.xml
pp/path_planning/src/: #include <iostream>.cpp  controller.cpp  planning.cpp  planning_new.cpp  rrt_ys.cpp
pp/tb3_pid/: CMakeLists.txt  package.xml
pp/tb3_pid/src/: control.cpp
simulation/camera_tutorial/: CMakeLists.txt  package.xml
simulation/camera_tutorial/configs/: config_pose.yaml
simulation/camera_tutorial/launch/: copy.launch  display.launch  dope.launch
simulation/camera_tutorial/urdf/: camera.sdf  camera.urdf  camera_sample.xacro  depth_camera.sdf  depth_camera1.sdf  depth_camera2.sdf  depth_camera3.sdf  dope_camera.sdf  example.urdf  tomato_soup_can.urdf
simulation/dope/scripts/: train.py
simulation/driving_area/img/point_label_img/: point_label_img_001.pgm
simulation/gazebo_domain_randomization/gazebo_domain_randomizer/: CMakeLists.txt  package.xml  spawn.yaml
simulation/gazebo_domain_randomization/gazebo_domain_randomizer/config/: spawn.txt
simulation/gazebo_domain_randomization/gazebo_domain_randomizer/launch/: .spawn.launch.swp  check_cam.launch  demo.launch  demo_1.launch  domain_1.launch  domain_randomizer.launch  dope_data_generator.launch  dope_randomizer.launch  dope_stage_2.launch  simulation_dope_randomizer.launch  spawn.launch  spawn_obj.launch  tt.launch
simulation/gazebo_domain_randomization/gazebo_domain_randomizer/nodes/: .marked_image_publisher.swp  background_randomizer  cam_replacer  depth_cv2  dope_data_collector  dope_evaluator  image_checker  light_randomizer  location_calculator  marked_image_cv2  marked_image_publisher  pc_cam1  pc_cam2  pc_cam3  point_cloud2  shapes_randomizer  shapes_randomizer_driving_area  simulation_object_randomizer  (+5 more)
(+6 files in other folders)
